# dhcp-project-rest-protocol

./: Cargo.toml  Makefile  README.md  dhcp.db  package-lock.json  start_frontend.bat  start_server.bat
src/: arp_parser.rs  config.rs  exporter.rs  ip_pool.rs  lib.rs  main.rs  message.rs  network_scanner.rs  scan_and_export.rs
src/api/: mod.rs
src/client/: discovery.rs  mod.rs
src/database/: blacklist.rs  devices.rs  init.rs  ip_pool.rs  mod.rs
src/message/: mod.rs  serializer.rs
src/server/: mod.rs  security.rs
src/utils/: analyze.rs  capture.rs  device_parser.rs  mac_lookup.rs  mod.rs  os_detector.rs
tests/: client_tests.rs
