[package]
name = "dhcp_project"
version = "0.1.0"
edition = "2021"
default-run = "dhcp_project"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.22", features = ["bundled"] }
dhcp4r = "0.1"
log = "0.4"
env_logger = "0.10"
nom = "7.1"
rand = "0.8"
actix-web = "4.4"
actix-cors = "0.6"